--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
 <p>home works!</p>
+<app-card-item></app-card-item>
+<app-card-item></app-card-item>
+<app-card-item></app-card-item>
+<app-card-item></app-card-item>
