update tela produto

--- a/frontend/src/app/pages/produto/produto.component.html
+++ b/frontend/src/app/pages/produto/produto.component.html
@@ -1,1 +1,62 @@
-<p>produto works!</p>
+<div class="container p-4">
+    <div class="row">
+        <h4 class="text ">Bola Mamona Borracha Maciça Furacão Pet Rosa</h4>
+    </div>
+
+</div>
+
+<div class="container w-100">
+    <div class="row w-100 mt-5">
+
+        <div class="col-md-4 col-10 d-flex justify-content-center">
+            <img class="card-img-top w-75 m-auto"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQWG25y1NExwEppBl22NcaDqM5qOBCxXuRewx580ssA--Sr_PFeM0cemaSkhPZsV7hwjhalFZfDBsM&usqp=CAc"
+                alt="Imagem do produto">
+        </div>
+
+        <div class="col-md-4 col-10">
+
+            <hr>
+
+            <h3> Preço: R$ 10,90 à vista</h3>
+        </div>
+
+        <div class="col-md-4 col-10">
+            <div class="card w-100" style="width: 19rem;">
+                <p class="card-text w-100 p-2 ">Bola Mamona Borracha Maciça Furacão Pet Rosa</p>
+            </div>
+
+            <div class="input-group mb-3 mt-4">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="inputGroupSelect01">Quantidade</label>
+                </div>
+                <select class="custom-select justify-content-center" id="inputGroupSelect01">
+                    <option selected value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                </select>
+                <div class="input-group-append ">
+                    <button class="btn btn-outline-secondary" type="button">Selecionar</button>
+                </div>
+            </div>
+
+            <div class="p-2">
+                <a class="btn btn-primary w-100" routerLink="/carrinho" role="button">Comprar</a>
+            </div>
+            <div class="p-2">
+                <a class="btn btn-primary w-100" routerLink="/carrinho" role="button">Doar</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container w-100 mt-5">
+    <div class="col-md-12 col-10">
+        <h3>Descrição</h3>
+        <div class="card w-100" style="width: 19rem;">
+            <p class="card-text w-100 p-2 "> Indicado para cães, borracha macia e resistente, com pontos e formato de uma mamona, brinquedo ideal para estimular as habilidades mentais.</p>
+        </div>
+    </div>
+</div>
