Update na tela Sobre

--- a/frontend/src/app/pages/sobre/sobre.component.html
+++ b/frontend/src/app/pages/sobre/sobre.component.html
@@ -1,1 +1,206 @@
-<p>sobre works!</p>
+
+    
+    <div class="container">
+        <div class="row">
+        
+
+        <div class="col-md-6">
+
+        <h1>A HelpPet</h1>
+        <div>
+          <p>
+            Mussum Ipsum, cacilds vidis litro abertis. Praesent malesuada urna
+            nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus.
+            Casamentiss faiz malandris se pirulitá. Si num tem leite então bota
+            uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.
+          </p>
+        </div>
+
+        </div>
+
+        <div class="col-md-6"></div>
+
+        </div>
+    </div>
+
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6"></div>
+
+            <div class="col-md-6">
+              <h2>
+                Apoio a<br />
+                comunidade<br />
+              </h2>
+
+              <div class="col-lg text-lg-right">
+                <p class="d-flex justify-content-center">
+                  Mussum Ipsum, cacilds vidis litro abertis. Interessantiss
+                  quisso pudia ce receita de bolis, mais bolis eu num gostis.
+                  Diuretics paradis num copo é motivis de denguis. Paisis,
+                  filhis, espiritis santis. Nec orci ornare consequat. Praesent
+                  lacinia ultrices consectetur. Sed non ipsum felis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>
+                Responsabilidade<br class="d-none d-lg-block" />
+                com os animais
+              </h2>
+
+              <div class="col-lg older-lg-1 text-lg-right">
+                <p>
+                  Si num tem leite então bota uma pinga aí cumpadi! A ordem dos
+                  tratores não altera o pão duris. Per aumento de cachacis, eu
+                  reclamis. Nullam volutpat risus nec leo commodo, ut interdum
+                  diam laoreet. Sed non consequat odio.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-6"></div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+              <h2>
+                Como se <br />
+                voluntariar?
+              </h2>
+
+              <div class="col-lg older-lg-1 text-lg-right">
+                <p>
+                  Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair,
+                  deitado sem dormir, sentado sem cochilar e fazendo pose.
+                  Atirei o pau no gatis, per gatis num morreus. Não sou faixa
+                  preta cumpadi, sou preto inteiris, inteiris. Nec orci ornare
+                  consequat. Praesent lacinia ultrices consectetur. Sed non
+                  ipsum felis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="jumbotron jumbotron-fluid">
+         <div class="container">
+    <h1 class="display-4">Nossa missão</h1>
+    <p class="lead">Quem num gosta di mé, boa gentis num é. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Sapien in monti palavris qui num significa nadis i pareci latim.  Suco de cevadiss deixa as pessoas mais interessantis.</p>
+        </div>
+       </div>
+
+            
+                
+           <h2 class="text-center p-5">Idealizadores</h2>
+           <div class="row">
+         
+            <div class="col-md-6">
+            <div >
+               
+            <div>
+               <img class="nossas-fotos p-3" src="https://img2.gratispng.com/20180309/whw/kisspng-drawing-person-photography-the-man-5aa29ecd53c1f6.1798435715206069253431.jpg" alt="Dev 1">
+            
+            <p class="text-lg-center ">
+                Delegadis gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Pra lá , depois divoltis porris, paradis.  
+            </p>
+         </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+            <div>
+               
+            <div>
+               <img class="nossas-fotos p-3" src="https://img2.gratispng.com/20180309/whw/kisspng-drawing-person-photography-the-man-5aa29ecd53c1f6.1798435715206069253431.jpg" alt="Dev 1">
+            
+            <p class="text-lg-center">
+                Delegadis gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Pra lá , depois divoltis porris, paradis.  
+            </p>
+         </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 p-10">
+            <div>
+               
+            <div>
+               <img class="nossas-fotos p-3" src="https://img2.gratispng.com/20180309/whw/kisspng-drawing-person-photography-the-man-5aa29ecd53c1f6.1798435715206069253431.jpg" alt="Dev 1">
+            
+            <p class="text-lg-center">
+                Delegadis gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Pra lá , depois divoltis porris, paradis.  
+            </p>
+         </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+            <div>
+               
+            <div>
+               <img class="nossas-fotos p-3" src="https://img2.gratispng.com/20180309/whw/kisspng-drawing-person-photography-the-man-5aa29ecd53c1f6.1798435715206069253431.jpg" alt="Dev 1">
+            
+            <p class="text-lg-center">
+                Delegadis gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Pra lá , depois divoltis porris, paradis.  
+            </p>
+         </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+            <div>
+               
+            <div>
+               <img class="nossas-fotos p-3" src="https://img2.gratispng.com/20180309/whw/kisspng-drawing-person-photography-the-man-5aa29ecd53c1f6.1798435715206069253431.jpg" alt="Dev 1">
+            
+            <p class="text-lg-center">
+                Delegadis gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Pra lá , depois divoltis porris, paradis.  
+            </p>
+         </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+            <div>
+               
+            <div>
+               <img class="nossas-fotos p-3" src="https://img2.gratispng.com/20180309/whw/kisspng-drawing-person-photography-the-man-5aa29ecd53c1f6.1798435715206069253431.jpg" alt="Dev 1">
+            
+            <p class="text-lg-center">
+                Delegadis gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Pra lá , depois divoltis porris, paradis.  
+            </p>
+         </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+            <div>
+               
+            <div>
+               <img class="nossas-fotos p-3" src="https://img2.gratispng.com/20180309/whw/kisspng-drawing-person-photography-the-man-5aa29ecd53c1f6.1798435715206069253431.jpg" alt="Dev 1">
+            
+            <p class="text-lg-center">
+                Delegadis gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Pra lá , depois divoltis porris, paradis.  
+            </p>
+
+         </div>
+          </div>
+        </div>
+    </div>
+
+
+            
+           
+             
+   
+ 
