--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,3 +10,17 @@ h6 {
 * {
   font-family: Work Sans, sans-serif;
 }
+
+.card-hover {
+  cursor: pointer;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  object-fit: contain;
+}
+
+.card-hover:hover {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(5.1);
+  transform: scale(1.1);
+}
