--- a/frontend/src/app/components/card-item/card-item.component.html
+++ b/frontend/src/app/components/card-item/card-item.component.html
@@ -1,1 +1,26 @@
-<p>card-item works!</p>
+<div class="container">
+    <div class="card">
+        <div class="imgBx">
+            <img 
+                src="assets/img/produtos/kisspng-iphone-8-plus-iphone-x-apple-facetime-telephone-iphone-x-5abb71e0d52224.827630021522233824873.png"
+                alt="">
+        </div>
+        <div class="contentBx">
+            <h2>Iphone 11 Max pro</h2>
+            <div class="size">
+                <h3>Size :</h3>
+                <span>7</span>
+                <span>8</span>
+                <span>9</span>
+                <span>10</span>
+            </div>
+            <div class="color">
+                <h3>Color :</h3>
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+            </div>
+            <a href="#">Buy now</a>
+        </div>
+    </div>
+</div>
