--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,11 +4,11 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Righteous, sans-serif;
+  font-family: Work Sans, sans-serif;
 }
 
 * {
-  font-family: Work Sans, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 .card-hover {
